@@ -8,7 +8,7 @@
 # Copyright (c) 2003 by Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: doctools.test,v 1.14 2006/01/29 05:58:20 andreas_kupries Exp $
+# RCS: @(#) $Id: doctools.test,v 1.15 2006/10/03 05:45:30 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -24,6 +24,16 @@ support {
 }
 testing {
     useLocal doctools.tcl doctools
+}
+
+# -------------------------------------------------------------------------
+
+set oldenv [array get env]
+foreach k [array names env LANG*] {
+    unset env($k)
+}
+foreach k [array names env LC_*] {
+    unset env($k)
 }
 
 # -------------------------------------------------------------------------
@@ -307,4 +317,12 @@ test doctools-9.0 {manpage syntax} {
 
 
 namespace forget ::doctools::new
+
+# -------------------------------------------------------------------------
+# Restore "env" array to the state it had at the beginning of the testsuite.
+
+#array unset env * - 8.4+, package is 8.2+
+foreach k [array names env] {unset env($k)}
+array set env $oldenv
+
 ::tcltest::cleanupTests
